--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
 
+    <string name="application_error_error_title">Ошибка подключения к сети Интернет</string>
+    <string name="retry_button_title">ОК</string>
+    <string name="exit_button_title">Выйти</string>
+    <string name="application_error_error_message">Повторить попытку подключения?</string>
+
 </resources>
